Spelling fixes for all

--- a/localisation/KR_April_l_english.yml
+++ b/localisation/KR_April_l_english.yml
@@ -1,6 +1,6 @@
 ﻿l_english:
 
-### Events
+### Events ###
 
 april.1.t:0 "The Rise of the Modders"
 april.1.d:0 "Today at dawn, a strange vessel descended from the skies onto Helsinki, emitting strange light and sounds. When it landed, to the surprise of the inhabitants of the city, numerous men in futuristic clothes came out and claimed that they were visitors from another world, that this world belonged to them and that they even created it. \nTheir claims were met with heavy resistance from Finns but it was all in vain. With their superior technology, they soon took over all off south-western Finland. Meanwhile, strange lights have been seen in the skies of Korea, most agree it is just mass hysteria…\nThe 'Modders' as they call themselves are ever growing and no one seems to be able to stop them, is this world condemned?" 
@@ -24,88 +24,88 @@ april.4.t:0 "The second Finno-Korean Hyperwar!"
 april.4.d:0 "The two alien empires are finally fighting each other. Reporters tell us of the bloodiest battles we could imagine, they say bodies are piling up hundreds of meters from the ground. We could think that this war was unmatched in human history but some ancients claim that the setting of it echoes another one that happened thousands of years ago. The Finno-Korean Hyperwar was fought between the Hwan Empire and the Ancient Finnish Empire more than two thousand years ago. All agree it was responsible for bringing the world into a dark age, forcing us to restart all technological progresses from scratch. Some think the hyperwars are divine punishments for trying to reach God and that we are long overdue for one. In all this chaos, whether the prophecy is true or not, this war is now known universally as 'The second Finno-Korean Hyperwar'."
 april.4.a:0 "Worrying."
 
-### Names
+### Names ###
 
 EMP_authoritarian_democrat:0 "Old Great Modders"
- EMP_authoritarian_democrat_ADJ:0 "Old Great"
- EMP_authoritarian_democrat_DEF:0 "The Old Great Modders"
- EMP_market_liberal:0 "Old Great Modders"
- EMP_market_liberal_ADJ:0 "Old Great"
- EMP_market_liberal_DEF:0 "The Old Great Modders"
- EMP_national_populist:0 "Old Great Modders"
- EMP_national_populist_ADJ:0 "Old Great"
- EMP_national_populist_DEF:0 "The Old Great Modders"
- EMP_paternal_autocrat:0 "Old Great Modders"
- EMP_paternal_autocrat_ADJ:0 "Old Great"
- EMP_paternal_autocrat_DEF:0 "The Old Great Modders"
- EMP_radical_socialist:0 "Old Great Modders"
- EMP_radical_socialist_ADJ:0 "Old Great"
- EMP_radical_socialist_DEF:0 "The Old Great Modders"
- EMP_social_conservative:0 "Old Great Modders"
- EMP_social_conservative_ADJ:0 "Old Great"
- EMP_social_conservative_DEF:0 "The Old Great Modders"
- EMP_social_democrat:0 "Old Great Modders"
- EMP_social_democrat_ADJ:0 "Old Great"
- EMP_social_democrat_DEF:0 "The Old Great Modders"
- EMP_social_liberal:0 "Old Great Modders"
- EMP_social_liberal_ADJ:0 "Old Great"
- EMP_social_liberal_DEF:0 "The Old Great Modders"
- EMP_syndicalist:0 "Old Great Modders"
- EMP_syndicalist_ADJ:0 "Old Great"
- EMP_syndicalist_DEF:0 "The Old Great Modders"
- EMP_totalist:0 "Old Great Modders"
- EMP_totalist_ADJ:0 "Old Great"
- EMP_totalist_DEF:0 "The Old Great Modders"
+EMP_authoritarian_democrat_ADJ:0 "Old Great"
+EMP_authoritarian_democrat_DEF:0 "The Old Great Modders"
+EMP_market_liberal:0 "Old Great Modders"
+EMP_market_liberal_ADJ:0 "Old Great"
+EMP_market_liberal_DEF:0 "The Old Great Modders"
+EMP_national_populist:0 "Old Great Modders"
+EMP_national_populist_ADJ:0 "Old Great"
+EMP_national_populist_DEF:0 "The Old Great Modders"
+EMP_paternal_autocrat:0 "Old Great Modders"
+EMP_paternal_autocrat_ADJ:0 "Old Great"
+EMP_paternal_autocrat_DEF:0 "The Old Great Modders"
+EMP_radical_socialist:0 "Old Great Modders"
+EMP_radical_socialist_ADJ:0 "Old Great"
+EMP_radical_socialist_DEF:0 "The Old Great Modders"
+EMP_social_conservative:0 "Old Great Modders"
+EMP_social_conservative_ADJ:0 "Old Great"
+EMP_social_conservative_DEF:0 "The Old Great Modders"
+EMP_social_democrat:0 "Old Great Modders"
+EMP_social_democrat_ADJ:0 "Old Great"
+EMP_social_democrat_DEF:0 "The Old Great Modders"
+EMP_social_liberal:0 "Old Great Modders"
+EMP_social_liberal_ADJ:0 "Old Great"
+EMP_social_liberal_DEF:0 "The Old Great Modders"
+EMP_syndicalist:0 "Old Great Modders"
+EMP_syndicalist_ADJ:0 "Old Great"
+EMP_syndicalist_DEF:0 "The Old Great Modders"
+EMP_totalist:0 "Old Great Modders"
+EMP_totalist_ADJ:0 "Old Great"
+EMP_totalist_DEF:0 "The Old Great Modders"
  
 REB_authoritarian_democrat:0 "A New Kaiserreich"
- REB_authoritarian_democrat_ADJ:0 "New"
- REB_authoritarian_democrat_DEF:0 "A New Kaiserreich"
- REB_market_liberal:0 "A New Kaiserreich"
- REB_market_liberal_ADJ:0 "New"
- REB_market_liberal_DEF:0 "A New Kaiserreich"
- REB_national_populist:0 "A New Kaiserreich"
- REB_national_populist_ADJ:0 "New"
- REB_national_populist_DEF:0 "A New Kaiserreich"
- REB_paternal_autocrat:0 "A New Kaiserreich"
- REB_paternal_autocrat_ADJ:0 "New"
- REB_paternal_autocrat_DEF:0 "A New Kaiserreich"
- REB_radical_socialist:0 "A New Kaiserreich"
- REB_radical_socialist_ADJ:0 "New"
- REB_radical_socialist_DEF:0 "A New Kaiserreich"
- REB_social_conservative:0 "A New Kaiserreich"
- REB_social_conservative_ADJ:0 "New"
- REB_social_conservative_DEF:0 "A New Kaiserreich"
- REB_social_democrat:0 "A New Kaiserreich"
- REB_social_democrat_ADJ:0 "New"
- REB_social_democrat_DEF:0 "A New Kaiserreich"
- REB_social_liberal:0 "A New Kaiserreich"
- REB_social_liberal_ADJ:0 "New"
- REB_social_liberal_DEF:0 "A New Kaiserreich"
- REB_syndicalist:0 "A New Kaiserreich"
- REB_syndicalist_ADJ:0 "New"
- REB_syndicalist_DEF:0 "A New Kaiserreich"
- REB_totalist:0 "A New Kaiserreich"
- REB_totalist_ADJ:0 "New"
- REB_totalist_DEF:0 "A New Kaiserreich"
+REB_authoritarian_democrat_ADJ:0 "New"
+REB_authoritarian_democrat_DEF:0 "A New Kaiserreich"
+REB_market_liberal:0 "A New Kaiserreich"
+REB_market_liberal_ADJ:0 "New"
+REB_market_liberal_DEF:0 "A New Kaiserreich"
+REB_national_populist:0 "A New Kaiserreich"
+REB_national_populist_ADJ:0 "New"
+REB_national_populist_DEF:0 "A New Kaiserreich"
+REB_paternal_autocrat:0 "A New Kaiserreich"
+REB_paternal_autocrat_ADJ:0 "New"
+REB_paternal_autocrat_DEF:0 "A New Kaiserreich"
+REB_radical_socialist:0 "A New Kaiserreich"
+REB_radical_socialist_ADJ:0 "New"
+REB_radical_socialist_DEF:0 "A New Kaiserreich"
+REB_social_conservative:0 "A New Kaiserreich"
+REB_social_conservative_ADJ:0 "New"
+REB_social_conservative_DEF:0 "A New Kaiserreich"
+REB_social_democrat:0 "A New Kaiserreich"
+REB_social_democrat_ADJ:0 "New"
+REB_social_democrat_DEF:0 "A New Kaiserreich"
+REB_social_liberal:0 "A New Kaiserreich"
+REB_social_liberal_ADJ:0 "New"
+REB_social_liberal_DEF:0 "A New Kaiserreich"
+REB_syndicalist:0 "A New Kaiserreich"
+REB_syndicalist_ADJ:0 "New"
+REB_syndicalist_DEF:0 "A New Kaiserreich"
+REB_totalist:0 "A New Kaiserreich"
+REB_totalist_ADJ:0 "New"
+REB_totalist_DEF:0 "A New Kaiserreich"
  
- POLITICS_SARMATIA_KRHOI_DESC:0 "The great creator of the wonderful mod you're playing. He created it in a stormy night 12 years ago, assembling pieces from his own Russian mod and other popular alternate histories to create Kaiserreich, Legacy of the Weltkrieg. Long disappeared he finally returned to help the KR4 modders lead the mod to a renewed greatness. Strong of his popularity he has now assumed command of all executive power in the country, including the commandment of all our armies and navies."
- POLITICS_SARMATIA_DESC:0 "The great creator of the wonderful mod you're playing. He created it in a stormy night 12 years ago, assembling pieces from his own Russian mod and other popular alternate histories to create Kaiserreich, Legacy of the Weltkrieg. He is now the hidden master of our powerful sect, no one ever sees him but everyone knows he is always lying in the shadows somewhere. It's told that only Yuriswe can get in contact with him, although with a ritual unknown to any other men."
+POLITICS_SARMATIA_KRHOI_DESC:0 "The great creator of the wonderful mod you're playing. He created it in a stormy night 12 years ago, assembling pieces from his own Russian mod and other popular alternate histories to create Kaiserreich, Legacy of the Weltkrieg. Long disappeared he finally returned to help the KR4 modders lead the mod to a renewed greatness. Strong of his popularity he has now assumed command of all executive power in the country, including the commandment of all our armies and navies."
+POLITICS_SARMATIA_DESC:0 "The great creator of the wonderful mod you're playing. He created it in a stormy night 12 years ago, assembling pieces from his own Russian mod and other popular alternate histories to create Kaiserreich, Legacy of the Weltkrieg. He is now the hidden master of our powerful sect, no one ever sees him but everyone knows he is always lying in the shadows somewhere. It's told that only Yuriswe can get in contact with him, although with a ritual unknown to any other men."
  
- # Ideas
+### Ideas ###
  
- fourth_wall_broken:0 "Fourth Wall Broken"
- cyber_rebellion:0 "The Youth joins the Fight"
+fourth_wall_broken:0 "Fourth Wall Broken"
+cyber_rebellion:0 "The Youth joins the Fight"
  
- #Ministers
+### Ministers ###
  
- eco_school_of_beep_boop:0 "School of Beep Boop"
- mhc_school_of_airhorn:0 "School of Airhorn"
- cnav_course_rough_irritating:0 "Course, Rough, Irritating"
- cair_academy_of_agressive_a_wing_attacks:0 "Academy of Aggressive A-wing Attacks"
- 
- ################################################################################################################################################################################################
-  ### EMP
-  ################################################################################################################################################################################################
+eco_school_of_beep_boop:0 "School of Beep Boop"
+mhc_school_of_airhorn:0 "School of Airhorn"
+cnav_course_rough_irritating:0 "Course, Rough, Irritating"
+cair_academy_of_agressive_a_wing_attacks:0 "Academy of Aggressive A-wing Attacks"
+
+################################################################################################################################################################################################
+### EMP
+################################################################################################################################################################################################
 
 	### Head of Government ###
 	 EMP_AC_hog_pau:0 "AC"
