--- a/localisation/KR_Colombia_l_english.yml
+++ b/localisation/KR_Colombia_l_english.yml
@@ -33,7 +33,7 @@ COL_break_the_chains:0 "Broken Chains"
 COL_break_the_chains_desc:0 "Colombia is now truly free and under the flag of Syndicalism!"
 COL_militias:0 "Worker's Militia"
 COL_militias_desc:0 "Worker's militias will make sure that we stay safe in case of army mutiny!"
-COL_collectivization:0 "Collectivization of Farms"
+COL_collectivization:0 "Collectivisation of Farms"
 COL_collectivization_desc:0 "Fields and plantations all over Colombia are being distributed to the peasantry"
 COL_assuming_direct_control:0 "Apparatus of State Seized"
 COL_assuming_direct_control_desc:0 "All semblance of legality has been dropped from the Leopardo Junta that rules over our nation"
@@ -59,13 +59,13 @@ COL_support_brigades_desc:0 "Support brigades are an integral part in modern mil
 COL_officer_schools:0 "Establish Officer Schools"
 COL_officer_schools_desc:0 "Our officers involved in the mission learned valuable insight into how modern war works, and they must pass on their knowledge tho lower rank officers to ensure our military is led by one cohesive vision"
 COL_commando_forces:0 "Commando Forces"
-COL_commando_forces_desc:0 "Specialised divisions are key to hold difficult terrain. We must be sure to have such divisions properly trained, so that we can exploit the tactical potential of paratroopers, marines and mountaneers"
+COL_commando_forces_desc:0 "Specialised divisions are key to hold difficult terrain. We must be sure to have such divisions properly trained, so that we can exploit the tactical potential of paratroopers, marines and mountaineers"
 COL_modern_divisons:0 "Modern Divisional Structure"
 COL_modern_divisons_desc:0 "Now our army reform can truly take place, we shall model our military structure on that of the Kaiserreich, and ensure Colombia is safe from foreign aggression for now."
 COL_mobile_warfare:0 "Mobile Warfare"
 COL_mobile_warfare_desc:0 "Many of our officers involved in the military mission believe that, given the vastness of South America when compared to an European front, our armies should be focusing on fast movement, not on operational integrity. The concept is controversial, but has merits"
 COL_tanques:0 "Panzerkampwagen"
-COL_tanques_desc:0 "The so called Panzers of the German army are something incredible to behold, their force and capacity to push into the enemy line cannot be understated. Perhaps we could use such capacity to our advantadge?"
+COL_tanques_desc:0 "The so called Panzers of the German army are something incredible to behold, their force and capacity to push into the enemy line cannot be understated. Perhaps we could use such capacity to our advantage?"
 COL_spart:0 "Self Propelled Artillery Experiments"
 COL_spart_desc:0 "The idea seems simple enough: strap heavy, otherwise virtually immobile heavy artillery into a tank chassis, and ensure we can take on enemy armour head on. Putting such idea into practice requires expertise we do not currently possess, however."
 COL_complete_military_modernization:0 "Complete Military Modernisation"
@@ -159,7 +159,7 @@ COL_plantation_grants_desc:0 "Many investors want to take part in the golden age
 COL_building_grants:0 "Building Grants"
 COL_building_grants_desc:0 "We will grant permission for interested parties to build industries for Colombia in state owned land, as so to ensure we have a competitive industrial capacity"
 COL_entente_ties:0 "Entente Ties"
-COL_entente_ties_desc:0 "We have deep economical ties with the Entente nations, and all we are requesting in return is some weapons so we can defend Democracy in South America. It's a fair deal, benefitial for all involved"
+COL_entente_ties_desc:0 "We have deep economical ties with the Entente nations, and all we are requesting in return is some weapons so we can defend Democracy in South America. It's a fair deal, beneficial for all involved"
 COL_liberal:0 "Liberal Victory"
 COL_liberal_desc:0 "We of the Liberales have always the better interest of Colombia in mind, not our personal desires. Now we must work towards a better future"
 COL_political_framework:0 "Political Framework"
@@ -169,7 +169,7 @@ COL_urban_renewal_desc:0 "We now must invest in our cities, the heart and soul o
 COL_trade_agreements:0 "Re-Negotiate Trade Agreements"
 COL_trade_agreements_desc:0 "Our trade agreements with our neighbours, both immediate and close by, should be revised for greater benefit of the Colombian nation"
 COL_contain_extremists:0 "Contain Extremist Elements"
-COL_contain_extremists_desc:0 "The Leopardos, once a fringe element in universities and intellectual circles, now have gathered a substantial following after the discrediting defeat of the Partido Conservador agaisnt us. However, their party is highly dangerous, and leaves us with no options but to outlaw it"
+COL_contain_extremists_desc:0 "The Leopardos, once a fringe element in universities and intellectual circles, now have gathered a substantial following after the discrediting defeat of the Partido Conservador against us. However, their party is highly dangerous, and leaves us with no options but to outlaw it"
 COL_rule_of_law:0 "A Stable Democracy"
 COL_rule_of_law_desc:0 "Many elements of UNIR and other labour organisations are not extremists, even Eliecer Gaitán. We need to reach out and make sure our party stands with the people, and not as it's enemy"
 COL_UNIR:0 "UNIR Victory"
