--- a/localisation/KR_Netherlands_l_english.yml
+++ b/localisation/KR_Netherlands_l_english.yml
@@ -17,7 +17,7 @@ HOL_crisis_desc:0 "The Netherlands are plunged into economic problems since Blac
 ### Foci ###
 HOL_east_indies_aut:0 "Autonomy for Dutch East Indies?"
 HOL_east_indies_aut_desc:0 "The people of the Netherlands East Indies have been calling for their independence. While maintaining colonies has been difficult these past years, we would lose many of our resources that are generated from the area. Increasing hostilities in the area have also threatened our colony."
-HOL_east_indies_aut_2:0 "Autonomus Indonesia"
+HOL_east_indies_aut_2:0 "Autonomous Indonesia"
 HOL_east_indies_aut_3:0 "Dutch Indonesia"
 HOL_decide:0 "Dutch Foreign Policy"
 HOL_neutral:0 "Neutrality"
