--- a/localisation/KR_White_Ruthenia_l_english.yml
+++ b/localisation/KR_White_Ruthenia_l_english.yml
@@ -169,7 +169,7 @@ whiteruthenia.36.d:0 "Horrible news! With in two days Nationalists in both Lithu
 whiteruthenia.36.a:0 "Destroy them!"
 whiteruthenia.36.b:0 "We cannot intervene"
 whiteruthenia.30.t:0 "Black Monday hits White Ruthenia!"
-whiteruthenia.30.d:0 "Almost two weeks ago, the Berlin Stock Exchange plunged into bottomless depths, throwing Germany's economy into an unprecedented crisis. Now the crash's shock waves have reached White Ruthenia. German-owned companies have closed down or laid-off their workers, the White Ruthenian rubel is losing value, and agricultural exports are shrinking..."
+whiteruthenia.30.d:0 "Almost two weeks ago, the Berlin Stock Exchange plunged into bottomless depths, throwing Germany's economy into an unprecedented crisis. Now the crash's shock waves have reached White Ruthenia. German-owned companies have closed down or laid-off their workers, the White Ruthenian Rubel is losing value, and agricultural exports are shrinking..."
 whiteruthenia.30.a:0 "Let's hope the government will save us from the worst..."
 whiteruthenia.31.t:0 "Ostwall fortification program"
 whiteruthenia.31.d:0 "With Russian armed forces emerging from previous years of neglect as fearsome force it is high time for us to improve our weak border defences. Our top military leaders propose to solve this situation via improving existing net of fortifications along borders with Russia, known as Ostwall. Once finished, such massive fortifications will surely stop any kind of Russian assault."
