Swedish politics. Nothing new, just better.

--- a/localisation/KR_Countries_l_english.yml
+++ b/localisation/KR_Countries_l_english.yml
@@ -3956,21 +3956,21 @@ SRI_totalist:0 "Socialist Republic of Italy"
 SRI_totalist_ADJ:0 "Socialist-Italian"
 SRI_totalist_DEF:0 "The Socialist Republic of Italy"
 
-SWE_authoritarian_democrat:0 "Evärderliga Kungariket Sverige"
+SWE_authoritarian_democrat:0 "Kingdom of Sverige"
 SWE_authoritarian_democrat_ADJ:0 "Swedish"
-SWE_authoritarian_democrat_DEF:0 "The Evärderliga Kungariket Sverige"
+SWE_authoritarian_democrat_DEF:0 "The Kingdom of Sverige"
 SWE_market_liberal:0 "Kingdom of Sweden"
 SWE_market_liberal_ADJ:0 "Swedish"
 SWE_market_liberal_DEF:0 "The Kingdom of Sweden"
-SWE_national_populist:0 "Folkstaten Sverige"
+SWE_national_populist:0 "Swedish Popular State"
 SWE_national_populist_ADJ:0 "Swedish"
-SWE_national_populist_DEF:0 "The Folkstaten Sverige"
-SWE_paternal_autocrat:0 "Svea Rike"
+SWE_national_populist_DEF:0 "The Swedish Popular State"
+SWE_paternal_autocrat:0 "Swedish Empire"
 SWE_paternal_autocrat_ADJ:0 "Swedish"
-SWE_paternal_autocrat_DEF:0 "Svea Rike"
-SWE_radical_socialist:0 "Folkrepubliken Sverige"
+SWE_paternal_autocrat_DEF:0 "The Swedish Empire"
+SWE_radical_socialist:0 "People's Repubic of Sweden"
 SWE_radical_socialist_ADJ:0 "Swedish"
-SWE_radical_socialist_DEF:0 "The Folkrepubliken Sverige"
+SWE_radical_socialist_DEF:0 "The People's Repubic of Sweden"
 SWE_social_conservative:0 "Kingdom of Sweden"
 SWE_social_conservative_ADJ:0 "Swedish"
 SWE_social_conservative_DEF:0 "The Kingdom of Sweden"
@@ -3980,12 +3980,12 @@ SWE_social_democrat_DEF:0 "The Kingdom of Sweden"
 SWE_social_liberal:0 "Kingdom of Sweden"
 SWE_social_liberal_ADJ:0 "Swedish"
 SWE_social_liberal_DEF:0 "The Kingdom of Sweden"
-SWE_syndicalist:0 "Autonoma Republiken Sverige"
+SWE_syndicalist:0 "Swedish Autonomous Republic"
 SWE_syndicalist_ADJ:0 "Swedish"
-SWE_syndicalist_DEF:0 "The Autonoma Republiken Sverige"
-SWE_totalist:0 "Rådsrepubliken Sverige"
+SWE_syndicalist_DEF:0 "The Swedish Autonomous Republic"
+SWE_totalist:0 "People's Repubic of Sweden"
 SWE_totalist_ADJ:0 "Swedish"
-SWE_totalist_DEF:0 "The Rådsrepubliken Sverige"
+SWE_totalist_DEF:0 "The People's Repubic of Sweden"
 
 SWI_authoritarian_democrat:0 "Swiss Confederation"
 SWI_authoritarian_democrat_ADJ:0 "Swiss"
