On the second thought I decided to remake it

--- a/localisation/KR_Ukraine_l_english.yml
+++ b/localisation/KR_Ukraine_l_english.yml
@@ -300,3 +300,6 @@ UKR_Revive_Agriculture:0 "Revive Agriculture"
 UKR_Revive_Agriculture_desc:0 "Our main aim was to turn Ukraine into the breadbasket of Europe, since we wanted to become extremely important for Germany and Mitteleuropa. But on the contrary we became even more dependent from the German goods after the Black Monday. Now we must reconstruct our national agriculture market, using our industry and new agricultural tools."
 UKR_Donbass_Industry:0 "Donbass Industry"
 UKR_Donbass_Industry_desc:0 "After a long period of political turbulence, the situation in Ukraine is more or less stable. And we have a good chance to continue reforms. Our long-term aim is to develop industry in the East of Ukraine. Thanks to the Tsarist regime, we have just to re-open old Donbass factories and modernise them a little or launch a formation of a new industrial region"
+
+UKR_Reorg_army:0 "New army of Ukraine"
+UKR_Reorg_army_desc:0 "The army of Ukraine is in poor condition as the Kingdom itself. But though the Berlin Stock Crisis made us reduce the military budget, but we still have enough money to launch the new reform, which will allow us to reorganize the Ministry of defence. It's time to strengthen our independence and secure our borders from the various enemies of Ukraine."
