--- a/localisation/KR_Austria_l_english.yml
+++ b/localisation/KR_Austria_l_english.yml
@@ -87,6 +87,7 @@ AUS_fortify_vienna:0 "Fortify Vienna"
 AUS_fortify_italy:0 "Fortify the Italian Border"
 AUS_daimler:0 "Austro Daimler"
 AUS_skoda:0 "Škoda"
+
 AUS_military_expansion:0 "Expand the Austrian Military"
 AUS_military_inf:0 "Reinforce the K.u.K Infantry"
 AUS_military_tank:0 "Create the K.u.K Panzertruppe"
@@ -101,6 +102,9 @@ AUS_flexible_navy:0 "Flexible Warfare"
 AUS_large_navy:0 "Large Navy Plan"
 AUS_capital_ships_effort:0 "Austrian Capital Ship Plan"
 AUS_small_ships_effort:0 "Austrian Small Ship Plan"
+
+AUS_ausgleich:0 "1937 Ausgleich"
+
 AUS_homeland:0 "Centralise the Empire"
 AUS_homeland_desc:0 "We have gained control over all Austro-Hungarian lands and its time to centralise into one government under the Kaiser. This might anger some people but we will make them accept our rightful claims!"
 AUS_pintsch:0 "Pintsch AG"
@@ -120,8 +124,10 @@ AUS_hungarian_lands:0 "Rebuild the Hungarian Industry"
 AUS_extend_hungarian_airbases:0 "Claim the Hungarian Skies"
 AUS_cro_bosnian_lands:0 "Expand Bosnian and Croat Industry"
 AUS_adria_sea_ports:0 "Buildup Adriatic Ports"
-AUS_claim_serbia:0 "Claim Serbia"
+AUS_claim_serbia:0 "Reclaim Serbia"
 AUS_claim_romanian_lands:0 "Claim Romanian Lands"
+AUS_claim_silesia:0 "Reclaim Silesia"
+AUS_claim_silesia_desc:0 "Silesia was seized by the Prussians in 1742 during the War of Austrian Succession. We feel like now would be a good time to retake what is ours."
 AUS_the_new_Empire:0 "The Greater Austrian Empire"
 
 ### Parties ###
