Don't you dare underestimate the k.k. Reichsbahn

--- a/localisation/KR_Austria_l_english.yml
+++ b/localisation/KR_Austria_l_english.yml
@@ -76,7 +76,7 @@ AUS_black_monday_2_focus:0 "k.k. Ministerium für Handel"
 AUS_eco_investment:0 "k.k. Sonderkommission für Wirtschaftliche Rehabilitation"
 AUS_farms_expand:0 "Expand domestic Farms"
 AUS_montenegro_resources:0 "Montenegro Oil Rigs"
-AUS_alpine_highways:0 "Alpine Highways"
+AUS_alpine_highways:0 "Electrifying the Südbahn"
 AUS_alpine_mines:0 "Alpine Mines"
 AUS_homeland_eco:0 "Austrian Civilian Economy"
 AUS_istria_ports:0 "Ports of Istria"
