POL Tree Bugfixin'

--- a/localisation/KR_Poland_l_english.yml
+++ b/localisation/KR_Poland_l_english.yml
@@ -311,7 +311,7 @@ POL_brest_livotsk:0 "Return of Brest-Litovsk"
 POL_brest_livotsk_desc:0 "With our close ties to GErmany, we have a unique opportunity to diplomatically press our claims to the region around Brest-Livotsk. This region is rightfully ours, and the world must know this."
 POL_sieze_galicia:0 "Seize Galicia"
 POL_sieze_galicia_desc:0 "Galicia is a rightful part of Poland, and we must press our claims to the region! Galicia will be returned to rightful Polish control!"
-POL_radek_policy:0 "Radek's New Policy"
+POL_radek_policy:0 "Economic Solidarity"
 POL_radek_policy_desc:0 "With a new government comes new economic policy. All nations who do not follow the rightful Syndicalist banner cannot strip Poland of her rightful resources!"
 POL_russian_technology:0 "Russian Armour Designs"
 POL_russian_technology_desc:0 "With our newfound alliance with Russia, it would be of great benefit to Poland if we were to work with the Russians on new and improved Panzer designs for our own forces."
