Nija, please take a look at this tomorrow, want to make sure it's all functioning as it should.
Fengtian:
Soy Agricultural Initiative Event
Drought of 1939 Event
Japan tie-ins
localization
Japan:
Drought of 1939 Event updated
Fengtian tie-ins
localization

--- a/localisation/KR_Japan_l_english.yml
+++ b/localisation/KR_Japan_l_english.yml
@@ -427,6 +427,26 @@ japdom.59.t:0 "A New 1281"
 japdom.59.d:0 "Our mortal enemies have made successful landings on our sacred islands! The nation must fully mobilise in order to stop them!..."
 japdom.59.a:0 "We will stop them!"
 
+japdom.60.t:0 "The Drought Takes its Toll"
+japdom.60.d:0 "INSERT"
+japdom.60.a:0 "Shou ga nai"
+
+japdom.61.t:0 "The Fengtian-Korea-Japan Provisions Proposal"
+japdom.61.d_pervasive:0 "INSERT"
+japdom.61.d_normal:0 "INSERT"
+japdom.61.a:0 "They will have no choice"
+japdom.61.b:0 "Send the request"
+japdom.61.c:0 "We will endure"
+
+japdom.62.t:0 "Fengtian Refuses our Proposal"
+japdom.62.d:0 "INSERT"
+japdom.62.a:0 "Punish this impertinence!"
+japdom.62.b:0 "Shou ga nai"
+
+japdom.63.t:0 "The Drought Ends"
+japdom.63.d:0 "INSERT"
+japdom.63.a:0 "Finally!"
+
 ### Tooltips ###
 niigata_focus:0 "The following weeks will determine the course of Japanese history. Choose wisely..."
 JAP_NAG:0 "Purged Restorationists"
