Ditto with this

--- a/localisation/KR_Countries_Cosmetic_l_english.yml
+++ b/localisation/KR_Countries_Cosmetic_l_english.yml
@@ -1286,9 +1286,9 @@ Kaiserbund_LAO_national_populist_DEF:0 "The Kingdom of Lan Xang"
 Kaiserbund_LAO_paternal_autocrat:0 "Lan Xang Empire"
 Kaiserbund_LAO_paternal_autocrat_ADJ:0 "Laotian"
 Kaiserbund_LAO_paternal_autocrat_DEF:0 "The Lan Xang Empire"
-Kaiserbund_LAO_radical_socialist:0 "Lao People's Demorcatic Republic"
+Kaiserbund_LAO_radical_socialist:0 "Lao People's Democratic Republic"
 Kaiserbund_LAO_radical_socialist_ADJ:0 "Laotian"
-Kaiserbund_LAO_radical_socialist_DEF:0 "The Lao People's Demorcatic Republic"
+Kaiserbund_LAO_radical_socialist_DEF:0 "The Lao People's Democratic Republic"
 Kaiserbund_LAO_social_conservative:0 "Kingdom of Laos"
 Kaiserbund_LAO_social_conservative_ADJ:0 "Laotian"
 Kaiserbund_LAO_social_conservative_DEF:0 "The Kingdom of Laos"
@@ -1298,12 +1298,12 @@ Kaiserbund_LAO_social_democrat_DEF:0 "The Kingdom of Laos"
 Kaiserbund_LAO_social_liberal:0 "Lao Republic"
 Kaiserbund_LAO_social_liberal_ADJ:0 "Laotian"
 Kaiserbund_LAO_social_liberal_DEF:0 "The Lao Republic"
-Kaiserbund_LAO_syndicalist:0 "Lao People's Demoratic Republic"
+Kaiserbund_LAO_syndicalist:0 "Lao People's Democratic Republic"
 Kaiserbund_LAO_syndicalist_ADJ:0 "Laotian"
-Kaiserbund_LAO_syndicalist_DEF:0 "Lao People's Demoratic Republic"
-Kaiserbund_LAO_totalist:0 "Lao People's Demoratic Republic"
+Kaiserbund_LAO_syndicalist_DEF:0 "Lao People's Democratic Republic"
+Kaiserbund_LAO_totalist:0 "Lao People's Democratic Republic"
 Kaiserbund_LAO_totalist_ADJ:0 "Laotian"
-Kaiserbund_LAO_totalist_DEF:0 "The Lao People's Demoratic Republic"
+Kaiserbund_LAO_totalist_DEF:0 "The Lao People's Democratic Republic"
 
 PHW_authoritarian_democrat:0 "Republic of The Philippines"
 PHW_authoritarian_democrat_ADJ:0 "Fiipino"
@@ -1786,7 +1786,6 @@ MYS_PRF_subject_ADJ:0 "Mysorean"
 TRV_PRF_subject:0 "Travancore-Cochin"
 TRV_PRF_subject_DEF:0 "Travancore-Cochin"
 TRV_PRF_subject_ADJ:0 "Travancorean"
-
 
 ##############
 #Vanilla
