Slight changes thanks to Flame

--- a/localisation/KR_Countries_l_english.yml
+++ b/localisation/KR_Countries_l_english.yml
@@ -2276,9 +2276,9 @@ ITA_totalist_DEF:0 "The Italian Republic"
 JAP_authoritarian_democrat:0 "Japanese Empire"
 JAP_authoritarian_democrat_ADJ:0 "Japanese"
 JAP_authoritarian_democrat_DEF:0 "The Japanese Empire"
-JAP_market_liberal:0 "Japan"
+JAP_market_liberal:0 "Japanese Empire"
 JAP_market_liberal_ADJ:0 "Japanese"
-JAP_market_liberal_DEF:0 "Japan"
+JAP_market_liberal_DEF:0 "The Japanese Empire"
 JAP_national_populist:0 "Japanese Empire"
 JAP_national_populist_ADJ:0 "Japanese"
 JAP_national_populist_DEF:0 "The Japanese Empire"
@@ -2288,15 +2288,15 @@ JAP_paternal_autocrat_DEF:0 "The Japanese Empire"
 JAP_radical_socialist:0 "Japanese Socialist Republic"
 JAP_radical_socialist_ADJ:0 "Japanese"
 JAP_radical_socialist_DEF:0 "The Japanese Socialist Republic"
-JAP_social_conservative:0 "Japan"
+JAP_social_conservative:0 "Japanese Empire"
 JAP_social_conservative_ADJ:0 "Japanese"
-JAP_social_conservative_DEF:0 "Japan"
+JAP_social_conservative_DEF:0 "Japanese Empire"
 JAP_social_democrat:0 "Japanese Empire"
 JAP_social_democrat_ADJ:0 "Japanese"
 JAP_social_democrat_DEF:0 "The Japanese Empire"
-JAP_social_liberal:0 "Japan"
+JAP_social_liberal:0 "Japanese Empire"
 JAP_social_liberal_ADJ:0 "Japanese"
-JAP_social_liberal_DEF:0 "Japan"
+JAP_social_liberal_DEF:0 "Japanese Empire"
 JAP_syndicalist:0 "Japanese Socialist Republic"
 JAP_syndicalist_ADJ:0 "Japanese"
 JAP_syndicalist_DEF:0 "The Japanese Socialist Republic"
@@ -5650,18 +5650,18 @@ DNF_totalist:0 "Danubian Federation"
 DNF_totalist_ADJ:0 "Danubian"
 DNF_totalist_DEF:0 "The Danubian Federation"
 
-FNG_authoritarian_democrat:0 "Fengtian Republic"
+FNG_authoritarian_democrat:0 "Fengtian Government"
 FNG_authoritarian_democrat_ADJ:0 "Chinese Fengtian"
-FNG_authoritarian_democrat_DEF:0 "The Fengtian Republic"
+FNG_authoritarian_democrat_DEF:0 "The Fengtian Government"
 FNG_market_liberal:0 "Fengtian"
 FNG_market_liberal_ADJ:0 "Chinese Fengtian"
 FNG_market_liberal_DEF:0 "Fengtian"
-FNG_national_populist:0 "Fengtian Republic"
+FNG_national_populist:0 "Fengtian Government"
 FNG_national_populist_ADJ:0 "Chinese Fengtian"
-FNG_national_populist_DEF:0 "The Fengtian Republic"
-FNG_paternal_autocrat:0 "Fengtian Republic"
+FNG_national_populist_DEF:0 "The Fengtian Government"
+FNG_paternal_autocrat:0 "Fengtian Government"
 FNG_paternal_autocrat_ADJ:0 "Chinese Fengtian"
-FNG_paternal_autocrat_DEF:0 "The Fengtian Republic"
+FNG_paternal_autocrat_DEF:0 "The Fengtian Government"
 FNG_radical_socialist:0 "Commune of Fengtian"
 FNG_radical_socialist_ADJ:0 "Chinese Fengtian"
 FNG_radical_socialist_DEF:0 "The Commune of Fengtian"
