A few more adjustments

--- a/localisation/KR_Countries_l_english.yml
+++ b/localisation/KR_Countries_l_english.yml
@@ -499,7 +499,7 @@ ALO_totalist:0 "Socialist Republic of Kazakhstan"
 ALO_totalist_ADJ:0 "Kazakh"
 ALO_totalist_DEF:0 "The Socialist Republic of Kazakhstan"
 
-AOG_authoritarian_democrat:0 "A.O.G"
+AOG_authoritarian_democrat:0 "Allg. Ostasien-GmbH"
 AOG_authoritarian_democrat_ADJ:0 "Deutsch-Ostasiat"
 AOG_authoritarian_democrat_DEF:0 "Allgemeine Ostasiengesellschaft"
 AOG_market_liberal:0 "Deutsche Ostasiengesellschaft"
@@ -508,7 +508,7 @@ AOG_market_liberal_DEF:0 "Deutsche Ostasiengesellschaft"
 AOG_national_populist:0 "Deutsch Ostasien"
 AOG_national_populist_ADJ:0 "Deutsch Ostasiatisch"
 AOG_national_populist_DEF:0 "Deutsch-Ostasiat"
-AOG_paternal_autocrat:0 "A.O.G"
+AOG_paternal_autocrat:0 "Allg. Ostasien-GmbH"
 AOG_paternal_autocrat_ADJ:0 "Deutsch-Ostasiat"
 AOG_paternal_autocrat_DEF:0 "Allgemeine Ostasiengesellschaft"
 AOG_radical_socialist:0 "Ostasiatische Kommune"
@@ -871,24 +871,24 @@ BOL_totalist:0 "Revolutionary Bolivia"
 BOL_totalist_ADJ:0 "Bolivian"
 BOL_totalist_DEF:0 "Revolutionary Bolivia"
 
-BOM_authoritarian_democrat:0 "Kingdom of Bohemia"
+BOM_authoritarian_democrat:0 "Bohemia"
 BOM_authoritarian_democrat_ADJ:0 "Bohemian"
-BOM_authoritarian_democrat_DEF:0 "The Kingdom of Bohemia"
+BOM_authoritarian_democrat_DEF:0 "Bohemia"
 BOM_market_liberal:0 "Bohemia"
 BOM_market_liberal_ADJ:0 "Bohemian"
 BOM_market_liberal_DEF:0 "Bohemia"
-BOM_national_populist:0 "Kingdom of Bohemia"
+BOM_national_populist:0 "Bohemia"
 BOM_national_populist_ADJ:0 "Bohemian"
-BOM_national_populist_DEF:0 "The Kingdom of Bohemia"
-BOM_paternal_autocrat:0 "Kingdom of Bohemia"
+BOM_national_populist_DEF:0 "Bohemia"
+BOM_paternal_autocrat:0 "Bohemia"
 BOM_paternal_autocrat_ADJ:0 "Bohemian"
-BOM_paternal_autocrat_DEF:0 "The Kingdom of Bohemia"
+BOM_paternal_autocrat_DEF:0 "Bohemia"
 BOM_radical_socialist:0 "Bohemian Socialist Republic"
 BOM_radical_socialist_ADJ:0 "Bohemian"
 BOM_radical_socialist_DEF:0 "Bohemian Socialist Republic"
-BOM_social_conservative:0 "Kingdom of Bohemia"
+BOM_social_conservative:0 "Bohemia"
 BOM_social_conservative_ADJ:0 "Bohemian"
-BOM_social_conservative_DEF:0 "The Kingdom of Bohemia"
+BOM_social_conservative_DEF:0 "Bohemia"
 BOM_social_democrat:0 "Bohemian Republic"
 BOM_social_democrat_ADJ:0 "Bohemian"
 BOM_social_democrat_DEF:0 "The Bohemian Republic"
@@ -1777,24 +1777,24 @@ FRP_totalist:0 "France"
 FRP_totalist_ADJ:0 "French"
 FRP_totalist_DEF:0 "France"
 
-GAL_authoritarian_democrat:0 "Kingdom of Galicia-Lodomeria"
+GAL_authoritarian_democrat:0 "Galicia-Lodomeria"
 GAL_authoritarian_democrat_ADJ:0 "Galician"
-GAL_authoritarian_democrat_DEF:0 "The Kingdom of Galicia-Lodomeria"
+GAL_authoritarian_democrat_DEF:0 "Galicia-Lodomeria"
 GAL_market_liberal:0 "Galicia-Lodomeria"
 GAL_market_liberal_ADJ:0 "Galician"
 GAL_market_liberal_DEF:0 "Galicia-Lodomeria"
-GAL_national_populist:0 "Kingdom of Galicia-Lodomeria"
+GAL_national_populist:0 "Galicia-Lodomeria"
 GAL_national_populist_ADJ:0 "Galician"
-GAL_national_populist_DEF:0 "The Kingdom of Galicia-Lodomeria"
-GAL_paternal_autocrat:0 "Kingdom of Galicia-Lodomeria"
+GAL_national_populist_DEF:0 "Galicia-Lodomeria"
+GAL_paternal_autocrat:0 "Galicia-Lodomeria"
 GAL_paternal_autocrat_ADJ:0 "Galician"
-GAL_paternal_autocrat_DEF:0 "The Kingdom of Galicia-Lodomeria"
+GAL_paternal_autocrat_DEF:0 "Galicia-Lodomeria"
 GAL_radical_socialist:0 "Union of Galicia-Lodomeria"
 GAL_radical_socialist_ADJ:0 "Galician"
 GAL_radical_socialist_DEF:0 "The Union of Galicia-Lodomeria"
-GAL_social_conservative:0 "Kingdom of Galicia-Lodomeria"
+GAL_social_conservative:0 "Galicia-Lodomeria"
 GAL_social_conservative_ADJ:0 "Galician"
-GAL_social_conservative_DEF:0 "The Kingdom of Galicia-Lodomeria"
+GAL_social_conservative_DEF:0 "Galicia-Lodomeria"
 GAL_social_democrat:0 "Galicia-Lodomerian Republic"
 GAL_social_democrat_ADJ:0 "Galician"
 GAL_social_democrat_DEF:0 "The Galicia-Lodomerian Republic"
@@ -2962,18 +2962,18 @@ OCC_totalist:0 "Commune of Occitania"
 OCC_totalist_ADJ:0 "Occitan"
 OCC_totalist_DEF:0 "The Commune of Occitania"
 
-OMA_authoritarian_democrat:0 "Sultanate of Oman"
+OMA_authoritarian_democrat:0 "Oman"
 OMA_authoritarian_democrat_ADJ:0 "Omani"
-OMA_authoritarian_democrat_DEF:0 "The Sultanate of Oman"
+OMA_authoritarian_democrat_DEF:0 "Oman"
 OMA_market_liberal:0 "Oman"
 OMA_market_liberal_ADJ:0 "Omani"
 OMA_market_liberal_DEF:0 "Oman"
-OMA_national_populist:0 "Sultanate of Oman"
+OMA_national_populist:0 "Oman"
 OMA_national_populist_ADJ:0 "Omani"
-OMA_national_populist_DEF:0 "The Sultanate of Oman"
-OMA_paternal_autocrat:0 "Sultanate of Oman"
+OMA_national_populist_DEF:0 "Oman"
+OMA_paternal_autocrat:0 "Oman"
 OMA_paternal_autocrat_ADJ:0 "Omani"
-OMA_paternal_autocrat_DEF:0 "The Sultanate of Oman"
+OMA_paternal_autocrat_DEF:0 "Oman"
 OMA_radical_socialist:0 "Socialist Republic of Oman"
 OMA_radical_socialist_ADJ:0 "Omani"
 OMA_radical_socialist_DEF:0 "The Socialist Republic of Oman"
@@ -4357,18 +4357,18 @@ XSM_totalist:0 "Xibei Commune"
 XSM_totalist_ADJ:0 "Chinese Xibei"
 XSM_totalist_DEF:0 "The Xibei Commune"
 
-YEM_authoritarian_democrat:0 "Sultanate of Yemen"
+YEM_authoritarian_democrat:0 "Yemen"
 YEM_authoritarian_democrat_ADJ:0 "Yemeni"
-YEM_authoritarian_democrat_DEF:0 "The Sultanate of Yemen"
+YEM_authoritarian_democrat_DEF:0 "Yemen"
 YEM_market_liberal:0 "Yemen"
 YEM_market_liberal_ADJ:0 "Yemeni"
 YEM_market_liberal_DEF:0 "Yemen"
-YEM_national_populist:0 "Sultanate of Yemen"
+YEM_national_populist:0 "Yemen"
 YEM_national_populist_ADJ:0 "Yemeni"
-YEM_national_populist_DEF:0 "The Sultanate of Yemen"
-YEM_paternal_autocrat:0 "Sultanate of Yemen"
+YEM_national_populist_DEF:0 "Yemen"
+YEM_paternal_autocrat:0 "Yemen"
 YEM_paternal_autocrat_ADJ:0 "Yemeni"
-YEM_paternal_autocrat_DEF:0 "The Sultanate of Yemen"
+YEM_paternal_autocrat_DEF:0 "Yemen"
 YEM_radical_socialist:0 "People's Democratic Republic of Yemen"
 YEM_radical_socialist_ADJ:0 "Yemeni"
 YEM_radical_socialist_DEF:0 "The People's Democratic Republic of Yemen"
