--- a/localisation/KR_Countries_l_english.yml
+++ b/localisation/KR_Countries_l_english.yml
@@ -2428,30 +2428,30 @@ LBR_totalist:0 "Socialist Republic of Liberia"
 LBR_totalist_ADJ:0 "Liberian"
 LBR_totalist_DEF:0 "The Socialist Republic of Liberia"
 
-LIT_authoritarian_democrat:0 "Kingdom of Lithuania"
+LIT_authoritarian_democrat:0 "Lithuania"
 LIT_authoritarian_democrat_ADJ:0 "Lithuanian"
-LIT_authoritarian_democrat_DEF:0 "The Kingdom of Lithuania"
-LIT_market_liberal:0 "Kingdom of Lithuania"
+LIT_authoritarian_democrat_DEF:0 "Lithuania"
+LIT_market_liberal:0 "Lithuania"
 LIT_market_liberal_ADJ:0 "Lithuanian"
-LIT_market_liberal_DEF:0 "The Kingdom of Lithuania"
-LIT_national_populist:0 "Kingdom of Lithuania"
+LIT_market_liberal_DEF:0 "Lithuania"
+LIT_national_populist:0 "Lithuania"
 LIT_national_populist_ADJ:0 "Lithuanian"
-LIT_national_populist_DEF:0 "The Kingdom of Lithuania"
-LIT_paternal_autocrat:0 "Kingdom of Lithuania"
+LIT_national_populist_DEF:0 "Lithuania"
+LIT_paternal_autocrat:0 "Lithuania"
 LIT_paternal_autocrat_ADJ:0 "Lithuanian"
-LIT_paternal_autocrat_DEF:0 "The Kingdom of Lithuania"
+LIT_paternal_autocrat_DEF:0 "Lithuania"
 LIT_radical_socialist:0 "Commune of Vilnius"
 LIT_radical_socialist_ADJ:0 "Lithuanian"
 LIT_radical_socialist_DEF:0 "The Commune of Vilnius"
-LIT_social_conservative:0 "Kingdom of Lithuania"
+LIT_social_conservative:0 "Lithuania"
 LIT_social_conservative_ADJ:0 "Lithuanian"
-LIT_social_conservative_DEF:0 "The Kingdom of Lithuania"
-LIT_social_democrat:0 "Kingdom of Lithuania"
+LIT_social_conservative_DEF:0 "Lithuania"
+LIT_social_democrat:0 "Lithuania"
 LIT_social_democrat_ADJ:0 "Lithuanian"
-LIT_social_democrat_DEF:0 "The Kingdom of Lithuania"
-LIT_social_liberal:0 "Kingdom of Lithuania"
+LIT_social_democrat_DEF:0 "Lithuania"
+LIT_social_liberal:0 "Lithuania"
 LIT_social_liberal_ADJ:0 "Lithuanian"
-LIT_social_liberal_DEF:0 "The Kingdom of Lithuania"
+LIT_social_liberal_DEF:0 "Lithuania"
 LIT_syndicalist:0 "People's Republic of Lithuania"
 LIT_syndicalist_ADJ:0 "Lithuanian"
 LIT_syndicalist_DEF:0 "The People's Republic of Lithuania"
@@ -3086,21 +3086,21 @@ PER_totalist:0 "Revolutionary Persia"
 PER_totalist_ADJ:0 "Persian"
 PER_totalist_DEF:0 "Revolutionary Persia"
 
-PHI_authoritarian_democrat:0 "Republic of The Philippines"
+PHI_authoritarian_democrat:0 "Republic of the Philippines"
 PHI_authoritarian_democrat_ADJ:0 "Filipino"
-PHI_authoritarian_democrat_DEF:0 "The Republic of The Philippines"
-PHI_market_liberal:0 "Republic of The Philippines"
+PHI_authoritarian_democrat_DEF:0 "The Republic of the Philippines"
+PHI_market_liberal:0 "Republic of the Philippines"
 PHI_market_liberal_ADJ:0 "Filipino"
-PHI_market_liberal_DEF:0 "The Republic of The Philippines"
-PHI_national_populist:0 "Republic of The Philippines"
+PHI_market_liberal_DEF:0 "The Republic of the Philippines"
+PHI_national_populist:0 "Republic of the Philippines"
 PHI_national_populist_ADJ:0 "Filipino"
-PHI_national_populist_DEF:0 "The Republic of The Philippines"
-PHI_paternal_autocrat:0 "Republic of The Philippines"
+PHI_national_populist_DEF:0 "The Republic of the Philippines"
+PHI_paternal_autocrat:0 "Republic of the Philippines"
 PHI_paternal_autocrat_ADJ:0 "Filipino"
-PHI_paternal_autocrat_DEF:0 "The Republic of The Philippines"
-PHI_radical_socialist:0 "Socialist Republic of The Philippines"
+PHI_paternal_autocrat_DEF:0 "The Republic of the Philippines"
+PHI_radical_socialist:0 "Socialist Republic of the Philippines"
 PHI_radical_socialist_ADJ:0 "Filipino"
-PHI_radical_socialist_DEF:0 "The Socialist Republic of The Philippines"
+PHI_radical_socialist_DEF:0 "The Socialist Republic of the Philippines"
 PHI_social_conservative:0 "Philippines"
 PHI_social_conservative_ADJ:0 "Filipino"
 PHI_social_conservative_DEF:0 "Philippines"
@@ -3110,12 +3110,12 @@ PHI_social_democrat_DEF:0 "Philippines"
 PHI_social_liberal:0 "Philippines"
 PHI_social_liberal_ADJ:0 "Filipino"
 PHI_social_liberal_DEF:0 "Philippines"
-PHI_syndicalist:0 "Socialist Republic of The Philippines"
+PHI_syndicalist:0 "Socialist Republic of the Philippines"
 PHI_syndicalist_ADJ:0 "Filipino"
-PHI_syndicalist_DEF:0 "The Socialist Republic of The Philippines"
-PHI_totalist:0 "Socialist Republic of The Philippines"
+PHI_syndicalist_DEF:0 "The Socialist Republic of the Philippines"
+PHI_totalist:0 "Socialist Republic of the Philippines"
 PHI_totalist_ADJ:0 "Filipino"
-PHI_totalist_DEF:0 "The Socialist Republic of The Philippines"
+PHI_totalist_DEF:0 "The Socialist Republic of the Philippines"
 
 POL_authoritarian_democrat:0 "Kingdom of Poland"
 POL_authoritarian_democrat_ADJ:0 "Polish"
@@ -3785,7 +3785,7 @@ RUS_radical_socialist_ADJ:0 "Russian"
 RUS_radical_socialist_DEF:0 "The Russian Republic"
 RUS_social_conservative:0 "Russian Republic"
 RUS_social_conservative_ADJ:0 "Russian"
-RUS_social_conservative_DEF:0 "The The Russian Republic"
+RUS_social_conservative_DEF:0 "The the Russian Republic"
 RUS_social_democrat:0 "Russian Republic"
 RUS_social_democrat_ADJ:0 "Russian"
 RUS_social_democrat_DEF:0 "The Russian Republic"
@@ -4658,36 +4658,36 @@ HAW_totalist:0 "Hawaii People's Republic"
 HAW_totalist_ADJ:0 "Hawaian"
 HAW_totalist_DEF:0 "The Hawaii People's Republic"
 
-PHL_authoritarian_democrat:0 "Republic of The Philippines"
+PHL_authoritarian_democrat:0 "Republic of the Philippines"
 PHL_authoritarian_democrat_ADJ:0 "Fiipino"
-PHL_authoritarian_democrat_DEF:0 "The Republic of The Philippines"
-PHL_market_liberal:0 "Republic of The Philippines"
+PHL_authoritarian_democrat_DEF:0 "The Republic of the Philippines"
+PHL_market_liberal:0 "Republic of the Philippines"
 PHL_market_liberal_ADJ:0 "Fiipino"
-PHL_market_liberal_DEF:0 "The Republic of The Philippines"
-PHL_national_populist:0 "Republic of The Philippines"
+PHL_market_liberal_DEF:0 "The Republic of the Philippines"
+PHL_national_populist:0 "Republic of the Philippines"
 PHL_national_populist_ADJ:0 "Fiipino"
-PHL_national_populist_DEF:0 "The Republic of The Philippines"
-PHL_paternal_autocrat:0 "Republic of The Philippines"
+PHL_national_populist_DEF:0 "The Republic of the Philippines"
+PHL_paternal_autocrat:0 "Republic of the Philippines"
 PHL_paternal_autocrat_ADJ:0 "Fiipino"
-PHL_paternal_autocrat_DEF:0 "The Republic of The Philippines"
-PHL_radical_socialist:0 "Socialist Republic of The Philippines"
+PHL_paternal_autocrat_DEF:0 "The Republic of the Philippines"
+PHL_radical_socialist:0 "Socialist Republic of the Philippines"
 PHL_radical_socialist_ADJ:0 "Fiipino"
-PHL_radical_socialist_DEF:0 "The Socialist Republic of The Philippines"
+PHL_radical_socialist_DEF:0 "The Socialist Republic of the Philippines"
 PHL_social_conservative:0 "Philippines"
 PHL_social_conservative_ADJ:0 "Fiipino"
 PHL_social_conservative_DEF:0 "Philippines"
 PHL_social_democrat:0 "Philippines"
 PHL_social_democrat_ADJ:0 "Fiipino"
 PHL_social_democrat_DEF:0 "Philippines"
-PHL_social_liberal:0 "Republic of The Philippines"
+PHL_social_liberal:0 "Republic of the Philippines"
 PHL_social_liberal_ADJ:0 "Fiipino"
-PHL_social_liberal_DEF:0 "The Republic of The Philippines"
-PHL_syndicalist:0 "Socialist Republic of The Philippines"
+PHL_social_liberal_DEF:0 "The Republic of the Philippines"
+PHL_syndicalist:0 "Socialist Republic of the Philippines"
 PHL_syndicalist_ADJ:0 "Fiipino"
-PHL_syndicalist_DEF:0 "The Socialist Republic of The Philippines"
-PHL_totalist:0 "Socialist Republic of The Philippines"
+PHL_syndicalist_DEF:0 "The Socialist Republic of the Philippines"
+PHL_totalist:0 "Socialist Republic of the Philippines"
 PHL_totalist_ADJ:0 "Fiipino"
-PHL_totalist_DEF:0 "The Socialist Republic of The Philippines"
+PHL_totalist_DEF:0 "The Socialist Republic of the Philippines"
 
 ALG_authoritarian_democrat:0 "Algeria"
 ALG_authoritarian_democrat_ADJ:0 "Algerian"
@@ -4899,9 +4899,9 @@ GHA_social_democrat_DEF:0 "Gold Coast Federation"
 GHA_social_liberal:0 "Gold Coast Federation"
 GHA_social_liberal_ADJ:0 "Federated"
 GHA_social_liberal_DEF:0 "Gold Coast Federation"
-GHA_syndicalist:0 "Combined Syndicates of The Gold Coast"
+GHA_syndicalist:0 "Combined Syndicates of the Gold Coast"
 GHA_syndicalist_ADJ:0 "Gold Coastal"
-GHA_syndicalist_DEF:0 "Combined Syndicates of The Gold Coast"
+GHA_syndicalist_DEF:0 "Combined Syndicates of the Gold Coast"
 GHA_totalist:0 "Golden Pact"
 GHA_totalist_ADJ:0 "Golden"
 GHA_totalist_DEF:0 "Golden Pact"
@@ -4940,9 +4940,9 @@ KEN_totalist_DEF:0 "Kenya"
 MAD_authoritarian_democrat:0 "Madras State"
 MAD_authoritarian_democrat_ADJ:0 "Madras"
 MAD_authoritarian_democrat_DEF:0 "Madras State"
-MAD_market_liberal:0 "Madras Republic"
+MAD_market_liberal:0 "Madras"
 MAD_market_liberal_ADJ:0 "Madras"
-MAD_market_liberal_DEF:0 "The Madras Republic"
+MAD_market_liberal_DEF:0 "Madras"
 MAD_national_populist:0 "Tamil Nadu"
 MAD_national_populist_ADJ:0 "Tamil"
 MAD_national_populist_DEF:0 "Tamil Nadu"
@@ -4952,15 +4952,15 @@ MAD_paternal_autocrat_DEF:0 "Madras State"
 MAD_radical_socialist:0 "Tamil Nadu"
 MAD_radical_socialist_ADJ:0 "Tamil"
 MAD_radical_socialist_DEF:0 "Tamil Nadu"
-MAD_social_conservative:0 "Madras Republic"
+MAD_social_conservative:0 "Madras"
 MAD_social_conservative_ADJ:0 "Madras"
-MAD_social_conservative_DEF:0 "The Madras Republic"
-MAD_social_democrat:0 "Madras Republic"
+MAD_social_conservative_DEF:0 "Madras"
+MAD_social_democrat:0 "Madras"
 MAD_social_democrat_ADJ:0 "Madras"
-MAD_social_democrat_DEF:0 "The Madras Republic"
-MAD_social_liberal:0 "Madras Republic"
+MAD_social_democrat_DEF:0 "Madras"
+MAD_social_liberal:0 "Madras"
 MAD_social_liberal_ADJ:0 "Madras"
-MAD_social_liberal_DEF:0 "The Madras Republic"
+MAD_social_liberal_DEF:0 "Madras"
 MAD_syndicalist:0 "Tamil Commune"
 MAD_syndicalist_ADJ:0 "Tamil"
 MAD_syndicalist_DEF:0 "The Tamil Commune"
