--- a/localisation/KR_Countries_l_english.yml
+++ b/localisation/KR_Countries_l_english.yml
@@ -3785,7 +3785,7 @@ RUS_radical_socialist_ADJ:0 "Russian"
 RUS_radical_socialist_DEF:0 "The Russian Republic"
 RUS_social_conservative:0 "Russian Republic"
 RUS_social_conservative_ADJ:0 "Russian"
-RUS_social_conservative_DEF:0 "The the Russian Republic"
+RUS_social_conservative_DEF:0 "The Russian Republic"
 RUS_social_democrat:0 "Russian Republic"
 RUS_social_democrat_ADJ:0 "Russian"
 RUS_social_democrat_DEF:0 "The Russian Republic"
